feat: nessy-testing speaks the new vocabulary
First module back into the reactor after the cutover. The test doubles
port across almost mechanically, because what they double changed shape
rather than purpose:

- ScriptedModel loses describe()/capabilities()/provider() with the
  Model surface that carried them, and answers to a ModelId.
- ScriptedApprover and RecordingApprover speak Awaited<ApprovalResult>.
  The old ApprovalOutcome.Deferred is now Awaited.Deferred, which means
  a scripted deferral must name when its lease runs out — so the double
  hands out an hour, long enough that no test races it and obviously a
  test value rather than a production term.
- RecordingSubscriber stops being a Consumer<Object> and implements
  AgentSubscriber, so what it records is typed and ofType() filters
  variants rather than arbitrary classes.

MemoryContractTest is rewritten rather than ported: Remembrance is gone,
and the invariant it existed to police is now the shape of Memory's own
overloads. The contract therefore tests what the type system cannot say
— that a tool-calling turn is refused unless its answers come with it,
and that agents cannot read each other's transcripts.

Transcripts certifies against it, and passed on the first run.

SubstrateContract gains coverage for deleteKind, which the substrate
grew for the engine's claim sweeping and no contract had pinned.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SpUrdWraf13taNsqJtJMTE